Moved back the non-release tag to the tags directory.