@@ -1,5 +1,5 @@
 // $Id$
-// Copyright (c) 1996-2006 The Regents of the University of California. All
+// Copyright (c) 1996-2004 The Regents of the University of California. All
 // Rights Reserved. Permission to use, copy, modify, and distribute this
 // software and its documentation without fee, and without a written
 // agreement is hereby granted, provided that the above copyright notice
@@ -24,555 +24,972 @@
 
 package org.argouml.kernel;
 
-import java.beans.PropertyChangeEvent;
-import java.beans.PropertyVetoException;
-import java.beans.VetoableChangeListener;
 import java.beans.VetoableChangeSupport;
+import java.io.BufferedWriter;
 import java.io.File;
+import java.io.FileNotFoundException;
+import java.io.FileOutputStream;
+import java.io.FileInputStream;
 import java.io.IOException;
-import java.net.URI;
-import java.net.URISyntaxException;
+import java.io.OutputStreamWriter;
+import java.net.MalformedURLException;
+import java.net.URL;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.HashMap;
 import java.util.HashSet;
+import java.util.Hashtable;
 import java.util.Iterator;
 import java.util.Set;
 import java.util.Vector;
+import java.util.zip.ZipEntry;
+import java.util.zip.ZipInputStream;
+import java.util.zip.ZipOutputStream;
+
+import javax.xml.parsers.ParserConfigurationException;
 
 import org.apache.log4j.Logger;
 import org.argouml.application.ArgoVersion;
-import org.argouml.application.api.Argo;
-import org.argouml.application.api.Configuration;
-import org.argouml.model.Model;
-import org.argouml.persistence.PersistenceManager;
+import org.argouml.cognitive.ProjectMemberTodoList;
+import org.argouml.model.ModelFacade;
+import org.argouml.model.uml.UmlFactory;
+import org.argouml.model.uml.UmlHelper;
+import org.argouml.model.uml.modelmanagement.ModelManagementHelper;
 import org.argouml.ui.ArgoDiagram;
+import org.argouml.ui.ProjectBrowser;
 import org.argouml.ui.explorer.ExplorerEventAdaptor;
 import org.argouml.ui.targetmanager.TargetEvent;
 import org.argouml.ui.targetmanager.TargetListener;
 import org.argouml.ui.targetmanager.TargetManager;
-import org.argouml.uml.Profile;
-import org.argouml.uml.ProfileException;
 import org.argouml.uml.ProfileJava;
 import org.argouml.uml.ProjectMemberModel;
-import org.argouml.uml.cognitive.ProjectMemberTodoList;
-import org.argouml.uml.diagram.DiagramFactory;
+import org.argouml.uml.UMLChangeRegistry;
 import org.argouml.uml.diagram.ProjectMemberDiagram;
-import org.argouml.uml.diagram.static_structure.ui.CommentEdge;
+import org.argouml.uml.diagram.state.ui.UMLStateDiagram;
 import org.argouml.uml.diagram.static_structure.ui.UMLClassDiagram;
 import org.argouml.uml.diagram.ui.UMLDiagram;
+import org.argouml.uml.diagram.use_case.ui.UMLUseCaseDiagram;
 import org.argouml.uml.generator.GenerationPreferences;
+import org.argouml.util.ChangeRegistry;
+import org.argouml.util.FileConstants;
+import org.argouml.util.SubInputStream;
+import org.argouml.util.Trash;
+import org.argouml.xml.argo.ArgoParser;
+import org.argouml.xml.pgml.PGMLParser;
+import org.argouml.xml.xmi.XMIReader;
+
 import org.tigris.gef.base.Diagram;
+import org.tigris.gef.ocl.OCLExpander;
+import org.tigris.gef.ocl.TemplateReader;
 import org.tigris.gef.presentation.Fig;
+import org.tigris.gef.util.Util;
+
+import org.xml.sax.InputSource;
+import org.xml.sax.SAXException;
 
 /**
- * The Project is a datastructure that represents the designer's
- * current project. It manages the list of diagrams and UML models.
+ * A datastructure that represents the designer's current project.  A
+ *  Project consists of diagrams and UML models.
  */
 public class Project implements java.io.Serializable, TargetListener {
 
-    /**
-     * Logger.
-     */
+    /** logger */
     private static final Logger LOG = Logger.getLogger(Project.class);
-
+    
     ////////////////////////////////////////////////////////////////
     // constants
+    
+    /**
+     * @deprecated by Linus Tolke as of 0.15.6. Will be removed.
+     *             Not currently used.
+     */
+    public static final String TEMPLATES = "/org/argouml/templates/";
+    
+    /**
+     * @deprecated by Linus Tolke as of 0.15.6. Will become private.
+     */
+    public static String ARGO_TEE = "/org/argouml/xml/dtd/argo.tee";
 
     /**
      * Default name for a project.
+     * @deprecated by Linus Tolke as of 0.15.6. Will become private.
      */
-    private static final String UNTITLED_FILE = "Untitled";
+    public static final String UNTITLED_FILE = "Untitled";
 
     ////////////////////////////////////////////////////////////////
     // static variables
-
+    
     /**
-     * The UID.
+     * This is used in the save process for PGML.
      */
+    protected static OCLExpander expander;
+
     static final long serialVersionUID = 1399111233978692444L;
 
     ////////////////////////////////////////////////////////////////
     // instance variables
 
-    /**
-     * TODO: should just be the directory to write.
+    /** TODO: should just be the directory to write
      */
-    private URI uri;
+    private URL _url;
+    protected ChangeRegistry _saveRegistry;
 
-    /* The preferences with project-scope: */
-    private String authorname;
-    private String authoremail;
-    private String description;
-    /* The ArgoUML version with which this project was last saved: */
-    private String version;
+    private String _authorname;
+    private String _description;
+    private String _version;
 
-    private ProjectSettings projectSettings;
-
-    private Vector searchpath;
-
-    // TODO: break into 3 main member types
-    // model, diagram and other
-    private MemberList members;
-
-    private String historyFile;
-
-    /**
-     * The version number of the persistence format that last
-     * saved this project.
-     */
-    private int persistenceVersion;
+    private Vector _searchpath;
+    private Vector _members;
+    private String _historyFile;
 
     /**
      * Instances of the uml model.
      */
-    private Vector models;
-
+    private Vector _models;
     /**
      * Instances of the uml diagrams.
      */
-    private Vector diagrams;
-    private Object defaultModel;
-    private Object currentNamespace;
-    private HashMap uuidRefs;
-    private GenerationPreferences cgPrefs;
-    private transient VetoableChangeSupport vetoSupport;
+    private Vector _diagrams;
+    protected Object _defaultModel;
+    private boolean _needsSave;
+    protected Object _currentNamespace;
+    private HashMap _UUIDRefs;
+    private GenerationPreferences _cgPrefs;
+    private transient VetoableChangeSupport _vetoSupport;
 
-    private Profile profile;
-
+    /**
+     * The root of the modeltree the user is working on. (The untitled_model in
+     * the navpane).
+     */
+    private Object _root;
+    
     /**
      * The active diagram, pointer to a diagram in the list with diagrams.
      */
-    private ArgoDiagram activeDiagram;
+    private ArgoDiagram _activeDiagram;
+
+    /** Cache for the default model.
+     */
+    private HashMap _defaultModelCache;
 
     /**
-     * Cache for the default model.
+     * Constructor.
+     * 
+     * @param file File to read from.
+     * @throws MalformedURLException if the file name is incorrect.
+     * @throws IOException if we cannot read the file.
      */
-    private HashMap defaultModelTypeCache;
-
-    private Collection trashcan = new ArrayList();
+    public Project(File file) throws MalformedURLException, IOException {
+        this(Util.fileToURL(file));
+    }
 
     /**
      * Constructor.
      *
-     * @param theProjectUri Uri to read the project from.
+     * @param url Url to read the project from.
      */
-    public Project(URI theProjectUri) {
+    public Project(URL url) {
         this();
-        uri = PersistenceManager.getInstance().fixUriExtension(theProjectUri);
+        _url = Util.fixURLExtension(url, FileConstants.COMPRESSED_FILE_EXT);
+        _saveRegistry = new UMLChangeRegistry();
+
     }
 
     /**
      * Constructor.
      */
     public Project() {
-        profile = new ProfileJava();
-        projectSettings = new ProjectSettings();
         
-        Model.getModelManagementFactory().setRootModel(null);
-
-        authorname = Configuration.getString(Argo.KEY_USER_FULLNAME);
-        authoremail = Configuration.getString(Argo.KEY_USER_EMAIL);
-        description = "";
+        _authorname = "";
+        _description = "";
         // this should be moved to a ui action.
-        version = ArgoVersion.getVersion();
-
-        searchpath = new Vector();
-        members = new MemberList();
-        historyFile = "";
-        models = new Vector();
-        diagrams = new Vector();
-        cgPrefs = new GenerationPreferences();
-        defaultModelTypeCache = new HashMap();
-
+        _version = ArgoVersion.getVersion();
+        
+        _searchpath = new Vector();
+        _members = new Vector();
+        _historyFile = "";
+        _models = new Vector();
+        _diagrams = new Vector();
+        _cgPrefs = new GenerationPreferences();
+        _defaultModelCache = new HashMap();
+        
+        _saveRegistry = new UMLChangeRegistry();
         LOG.info("making empty project with empty model");
-        try {
-            // Jaap Branderhorst 2002-12-09
-            // load the default model
-            // this is NOT the way how it should be since this makes argo
-            // depend on Java even more.
-            setDefaultModel(profile.getProfileModel());
-        } catch (ProfileException e) {
-            // TODO: how are we going to handle exceptions here?
-            // I think we need a ProjectException.
-            LOG.error("Exception setting the default profile", e);
-        }
+        // Jaap Branderhorst 2002-12-09
+        // load the default model
+        // this is NOT the way how it should be since this makes argo
+        // depend on Java even more.
+        setDefaultModel(ProfileJava.loadProfileModel());
         addSearchPath("PROJECT_DIR");
+        setNeedsSave(false);
         TargetManager.getInstance().addTargetListener(this);
+
+    }
+
+    /**
+     * Makes a just created project to an untitled project with a
+     * class diagram and a usecase diagram and an untitled model.
+     */
+    protected void makeUntitledProject() {
+        if (getRoot() != null)
+            throw new IllegalStateException("Tried to make a non-empty project "
+					    + "to an untitled project");
+        Object model =
+            UmlFactory.getFactory().getModelManagement().createModel();
+        ModelFacade.setName(model, "untitledModel");
+        setRoot(model);
+        setCurrentNamespace(model);
+        addMember(new ProjectMemberTodoList("", this));
+        addMember(new UMLClassDiagram(model));
+        addMember(new UMLUseCaseDiagram(model));
+        setNeedsSave(false);       
+        setActiveDiagram((ArgoDiagram) getDiagrams().get(0));
+    }
+ 
+    /**
+     * Constructor.
+     * 
+     * @param model The new model.
+     */
+    public Project(Object model) {
+        this();
+        
+        if (!ModelFacade.isAModel(model)) {
+            throw new IllegalArgumentException();
+	}
+        
+        LOG.info("making empty project with model: "
+		 + ModelFacade.getName(model));
+        setRoot(model);
+        setCurrentNamespace(model);
+        setNeedsSave(false);
+
+    }
+    
+    /**
+     * Loads a model (XMI only) from a .zargo file. BE ADVISED this
+     * method has a side effect. It sets _UUIDREFS to the model.
+     * 
+     * If there is a problem with the xmi file, an error is set in the
+     * ArgoParser.SINGLETON.getLastLoadStatus() field. This needs to be
+     * examined by the calling function.
+     *
+     * @param url The url with the .zargo file
+     * @return MModel The model loaded
+     * @throws IOException Thrown if the model or the .zargo file is corrupted.
+     * @throws SAXException If the parser template is syntactically incorrect. 
+     * @throws ParserConfigurationException If the initialization of 
+     *         the parser fails.
+     */
+    protected Object loadModelFromXMI(URL url)
+	throws IOException, SAXException, ParserConfigurationException {
+        ZipInputStream zis = new ZipInputStream(url.openStream());
+
+        String name = zis.getNextEntry().getName();
+        while (!name.endsWith(".xmi")) {
+            name = zis.getNextEntry().getName();
+        }
+        LOG.info("Loading Model from " + url);
+        // 2002-07-18
+        // Jaap Branderhorst
+        // changed the loading of the projectfiles to solve hanging 
+        // of argouml if a project is corrupted. Issue 913
+        // Created xmireader with method getErrors to check if parsing went well
+        XMIReader xmiReader = null;
+        try {
+            xmiReader = new XMIReader();
+        } catch (SAXException se) { // duh, this must be catched and handled
+            LOG.error(se);
+            throw se;
+        } catch (ParserConfigurationException pc) { 
+	    // duh, this must be catched and handled
+            LOG.error(pc);
+            throw pc;
+        }
+        Object mmodel = null;
+
+        InputSource source = new InputSource(zis);
+        source.setEncoding("UTF-8");
+        mmodel = xmiReader.parseToModel(source);        
+        if (xmiReader.getErrors()) {
+            ArgoParser.SINGLETON.setLastLoadStatus(false);
+            ArgoParser.SINGLETON.setLastLoadMessage("XMI file " + url
+						    + " could not be parsed.");
+            LOG.error("XMI file " + url + " could not be parsed.");
+            throw new SAXException("XMI file " + url + " could not be parsed.");
+        }
+
+        // This should probably be inside xmiReader.parse
+        // but there is another place in this source
+        // where XMIReader is used, but it appears to be
+        // the NSUML XMIReader.  When Argo XMIReader is used
+        // consistently, it can be responsible for loading
+        // the listener.  Until then, do it here.
+        UmlHelper.getHelper().addListenersToModel(mmodel);
+
+        addMember(mmodel);
+
+        _UUIDRefs = new HashMap(xmiReader.getXMIUUIDToObjectMap());
+        return mmodel;
+    }
+
+    /**
+     * Loads all the members from a zipped input stream.
+     *
+     * @param url The URL to the input stream.
+     * @throws IOException if there is something wrong with the zipped archive
+     *                     or with the model.
+     * @throws ParserConfigurationException if the parser is misconfigured.
+     * @throws SAXException if the input is not correctly formatted XML.
+     */
+    protected void loadZippedProjectMembers(URL url)
+        throws IOException, ParserConfigurationException, SAXException {
+
+        loadModelFromXMI(url); // throws a IOException if things go wrong
+        // user interface has to handle that one
+        try {
+
+            // now close again, reopen and read the Diagrams.
+
+            PGMLParser.SINGLETON.setOwnerRegistry(_UUIDRefs);
+
+            //zis.close();
+            ZipInputStream zis = new ZipInputStream(url.openStream());
+            SubInputStream sub = new SubInputStream(zis);
+
+            ZipEntry currentEntry = null;
+            while ((currentEntry = sub.getNextEntry()) != null) {
+                if (currentEntry.getName().endsWith(".pgml")) {
+                    LOG.info(
+				  "Now going to load "
+				  + currentEntry.getName()
+				  + " from ZipInputStream");
+
+                    // "false" means the stream shall not be closed,
+                    // but it doesn't seem to matter...
+                    ArgoDiagram d =
+                        (ArgoDiagram) PGMLParser.SINGLETON.readDiagram(
+								      sub,
+								      false);
+                    if (d != null) {                  
+                        addMember(d);
+                    }
+                    else {
+                        LOG.error("An error occurred while loading " 
+                            + currentEntry.getName());
+                    }
+                    // sub.closeEntry();
+                    LOG.info("Finished loading " + currentEntry.getName());
+                }
+                if (currentEntry.getName().endsWith(".todo")) {
+                    ProjectMemberTodoList pm =
+                        new ProjectMemberTodoList(currentEntry.getName(), this);
+                    try {
+                        pm.load(sub);
+                    } catch (IOException ioe) {
+                    } catch (org.xml.sax.SAXException se) {
+                    }
+                    addMember(pm);
+                }
+            }
+            zis.close();
+
+	} catch (IOException e) {
+            ArgoParser.SINGLETON.setLastLoadStatus(false);
+            ArgoParser.SINGLETON.setLastLoadMessage(e.toString());
+            LOG.error("Something went wrong in "
+		      + "Project.loadZippedProjectMembers()",
+		      e);
+            throw e;
+        }
     }
 
     /**
      * Find the base name of this project.<p>
-     *
-     * This is the name minus any valid file extension.
-     *
+     * 
+     * Previous javadoc comment that Linus don't understand:
+     * Added Eugenio's patches to load 0.8.1 projects.
+     * 
      * @return The name (a String).
      */
     public String getBaseName() {
         String n = getName();
-        n = PersistenceManager.getInstance().getBaseName(n);
+
+        if (n.endsWith(FileConstants.COMPRESSED_FILE_EXT)) {
+            return n.substring(0,
+			       n.length()
+			       - FileConstants.COMPRESSED_FILE_EXT.length());
+        }
+        if (n.endsWith(FileConstants.UNCOMPRESSED_FILE_EXT)) {
+            return n.substring(0,
+			       n.length()
+			       - FileConstants.UNCOMPRESSED_FILE_EXT.length());
+        }
         return n;
     }
 
-    /**
-     * Get the project name. This is just the name part of the full filename.
-     * @return the name of the project
-     */
     public String getName() {
         // TODO: maybe separate name
-        if (uri == null) {
+        if (_url == null)
             return UNTITLED_FILE;
-        }
-        return new File(uri).getName();
+        String name = _url.getFile();
+        int i = name.lastIndexOf('/');
+        return name.substring(i + 1);
     }
 
     /**
-     * Set the project URI.
-     *
-     * @param n The new URI (as a String).
-     * @throws URISyntaxException if the argument cannot be converted to
-     *         an URI.
+     * Set the project URL.
+     * 
+     * @param n The new URL (as a String).
+     * @throws MalformedURLException if the argument cannot be converted to 
+     *         an URL.
      */
     public void setName(String n)
-        throws URISyntaxException {
+        throws MalformedURLException {
         String s = "";
-        if (getURI() != null) {
-            s = getURI().toString();
-        }
+        if (getURL() != null)
+            s = getURL().toString();
         s = s.substring(0, s.lastIndexOf("/") + 1) + n;
-        setURI(new URI(s));
+        setURL(new URL(s));
     }
 
     /**
-     * Get the URI for this project.
-     *
-     * @return The URI.
+     * Get the URL for this project.
+     * 
+     * @return The URL.
      */
-    public URI getURI() {
-        return uri;
+    public URL getURL() {
+        return _url;
     }
 
     /**
-     * Set the URI for this project.
-     *
-     * @param theUri The URI to set.
+     * Set the URL for this project.
+     * 
+     * @param url The URL to set.
      */
-    public void setURI(URI theUri) {
-        if (theUri != null) {
-            theUri = PersistenceManager.getInstance().fixUriExtension(theUri);
+    public void setURL(URL url) {
+        if (url != null) {
+            url = Util.fixURLExtension(url, FileConstants.COMPRESSED_FILE_EXT);
         }
 
-        if (LOG.isDebugEnabled()) {
-            LOG.debug("Setting project URI from \"" + uri
-                      + "\" to \"" + theUri + "\".");
-        }
+        LOG.debug("Setting project URL from \"" + _url 
+		  + "\" to \"" + url + "\".");
 
-        uri = theUri;
+        _url = url;
     }
 
     /**
      * Set the project file.
-     *
-     * This only works if it is possible to convert the File to an uri.
+     * 
+     * This only works if it is possible to convert the File to an url.
      *
      * @param file File to set the project to.
      */
     public void setFile(File file) {
-        URI theProjectUri = file.toURI();
+        try {
+            URL url = Util.fileToURL(file);
 
-        if (LOG.isDebugEnabled()) {
-            LOG.debug("Setting project file name from \""
-                      + uri
-                      + "\" to \""
-                      + theProjectUri
-                      + "\".");
+            LOG.debug(
+		      "Setting project file name from \""
+		      + _url
+		      + "\" to \""
+		      + url
+		      + "\".");
+
+            _url = url;
+        } catch (MalformedURLException murle) {
+            LOG.error("problem in setFile:" + file, murle);
+        } catch (IOException ex) {
+            LOG.error("problem in setFile:" + file, ex);
         }
-
-        uri = theProjectUri;
     }
 
-    /**
-     * @return the search path
-     */
     public Vector getSearchPath() {
-        return searchpath;
+        return _searchpath;
+    }
+    public void addSearchPath(String searchpath) {
+        _searchpath.addElement(searchpath);
     }
 
-    /**
-     * @param searchPathElement the element to be added to the searchpath
-     */
-    public void addSearchPath(String searchPathElement) {
-        if (!this.searchpath.contains(searchPathElement)) {
-            this.searchpath.addElement(searchPathElement);
+    public URL findMemberURLInSearchPath(String name) {
+        //ignore searchpath, just find it relative to the project file
+        String u = "";
+        if (getURL() != null)
+            u = getURL().toString();
+        u = u.substring(0, u.lastIndexOf("/") + 1);
+        URL url = null;
+        try {
+            url = new URL(u + name);
+        } catch (MalformedURLException murle) {
+            LOG.error(
+		      "MalformedURLException in findMemberURLInSearchPath:"
+		      + u
+		      + name,
+		      murle);
         }
+        return url;
     }
 
     /**
      * Get all members of the project.
-     *
+     * 
      * @return a Vector with all members.
      */
-    public MemberList getMembers() {
-        LOG.info("Getting the members there are " + members.size());
-        return members;
+    public Vector getMembers() {
+        return _members;
     }
 
     /**
-     * @param d the diagram
+     * Add a member to this project.
+     * 
+     * @param name The name of the member.
+     * @param type The type of the member. 
+     * 		   One of <tt>"pgml"</tt> or <tt>"xmi"</tt>.
      */
-    private void addDiagramMember(ArgoDiagram d) {
+    public void addMember(String name, String type) {
+        
+        URL memberURL = findMemberURLInSearchPath(name);
+        if (memberURL == null) {
+            LOG.debug("null memberURL");
+            return;
+        } else
+            LOG.debug("memberURL = " + memberURL);
+        ProjectMember pm = findMemberByName(name);
+        if (pm != null)
+            return;
+        if ("pgml".equals(type))
+            pm = new ProjectMemberDiagram(name, this);
+        else if ("xmi".equals(type))
+            pm = new ProjectMemberModel(name, this);
+        else
+            throw new RuntimeException("Unknown member type " + type);
+        _members.addElement(pm);
+    }
+
+    public void addMember(ArgoDiagram d) {
         ProjectMember pm = new ProjectMemberDiagram(d, this);
         addDiagram(d);
         // if diagram added successfully, add the member too
-        members.add(pm);
+        _members.addElement(pm);
     }
 
-    /**
-     * @param pm the member to be added
-     */
-    private void addTodoMember(ProjectMemberTodoList pm) {
-        // Adding a todo member removes any existing one.
-        members.add(pm);
-        LOG.info("Added todo member, there are now " + members.size());
-    }
-
-    /**
-     * @param m the member to be added
-     */
-    public void addMember(Object m) {
-
-        if (m == null) {
-            throw new IllegalArgumentException(
-                    "A model member must be suppleid");
-        } else if (m instanceof ArgoDiagram) {
-            LOG.info("Adding diagram member");
-            addDiagramMember((ArgoDiagram) m);
-        } else if (m instanceof ProjectMemberTodoList) {
-            LOG.info("Adding todo member");
-            addTodoMember((ProjectMemberTodoList) m);
-        } else if (Model.getFacade().isAModel(m)) {
-            LOG.info("Adding model member");
-            addModelMember(m);
-        } else {
-            throw new IllegalArgumentException(
-                    "The member must be a UML model todo member or diagram."
-                    + "It is " + m.getClass().getName());
-        }
-        LOG.info("There are now " + members.size() + " members");
-    }
-
-    /**
-     * @param m the model
-     */
-    private void addModelMember(Object m) {
-
-        boolean memberFound = false;
-        Object currentMember =
-            members.getMember(ProjectMemberModel.class);
-        if (currentMember != null) {
-            Object currentModel =
-                ((ProjectMemberModel) currentMember).getModel();
-            if (currentModel == m) {
-                memberFound = true;
+    public void addMember(ProjectMemberTodoList pm) {
+        Iterator iter = _members.iterator();
+        Object currentMember = null;
+        while (iter.hasNext()) {
+            currentMember = iter.next();
+            if (currentMember instanceof ProjectMemberTodoList) {
+                /* No need to have several of these */
+                return;
             }
         }
+        // got past the veto, add the member
+        _members.addElement(pm);
+    }
 
+    public void addMember(Object m) {
+        
+        if (!ModelFacade.isAModel(m)) {
+            throw new IllegalArgumentException();
+	}
+        
+        Iterator iter = _members.iterator();
+        Object currentMember = null;
+        boolean memberFound = false;
+        while (iter.hasNext()) {
+            currentMember = iter.next();
+            if (currentMember instanceof ProjectMemberModel) {
+                Object currentModel =
+                    ((ProjectMemberModel) currentMember).getModel();
+                if (currentModel == m) {
+                    memberFound = true;
+                    break;
+                }
+            }
+        }
         if (!memberFound) {
-            if (!models.contains(m)) {
+            if (!_models.contains(m)) {
                 addModel(m);
             }
             // got past the veto, add the member
             ProjectMember pm = new ProjectMemberModel(m, this);
-            LOG.info("Adding model member to start of member list");
-            members.add(pm);
-        } else {
-            LOG.info("Attempted to load 2 models");
-            throw new IllegalArgumentException(
-                    "Attempted to load 2 models");
+            _members.addElement(pm);
         }
     }
 
     /**
-     * @param model a namespace
+     * @param m a namespace
      */
-    public void addModel(Object model) {
-
-        if (!Model.getFacade().isANamespace(model)) {
+    public void addModel(Object m) {
+        
+        if (!ModelFacade.isANamespace(m)) {
             throw new IllegalArgumentException();
 	}
-
+        
         // fire indeterminate change to avoid copying vector
-        if (!models.contains(model)) {
-            models.addElement(model);
-        }
-        setCurrentNamespace(model);
-        ProjectManager.getManager().setSaveEnabled(true);
+        if (!_models.contains(m))
+            _models.addElement(m);
+        setCurrentNamespace(m);
+        setNeedsSave(true);
     }
 
     /**
      * Removes a project member diagram completely from the project.
-     * @param d the ArgoDiagram
+     * @param d
      */
+
     protected void removeProjectMemberDiagram(ArgoDiagram d) {
-        if (activeDiagram == d) {
-            ArgoDiagram defaultDiagram;
-            if (diagrams.size() == 1) {
-                // We're deleting the last diagram so lets create a new one
-                // TODO: Once we go MDI we won't need this.
-                Object treeRoot = 
-                    Model.getModelManagementFactory().getRootModel();
-                defaultDiagram =
-                    DiagramFactory.getInstance()
-                        .createDiagram(UMLClassDiagram.class, treeRoot, null);
-                addMember(defaultDiagram);
-            } else {
-                // Make the topmost diagram (that is not the one being deleted)
-                // current.
-                defaultDiagram = (ArgoDiagram) diagrams.get(0);
-                if (defaultDiagram == d) {
-                    defaultDiagram = (ArgoDiagram) diagrams.get(1);
-                }
-            }
-            activeDiagram = defaultDiagram;
-            TargetManager.getInstance().setTarget(defaultDiagram);
-        }
 
         removeDiagram(d);
-        members.remove(d);
-        d.remove();
-        ProjectManager.getManager().setSaveEnabled(true);
+
+        // should remove the corresponding ProjectMemberDiagram not
+        // the ArgoDiagram from the members
+
+        // _members.removeElement(d);
+        // ehhh lets remove the diagram really and remove it from its
+        // corresponding projectmember too
+        Iterator it = _members.iterator();
+        while (it.hasNext()) {
+            Object obj = it.next();
+            if (obj instanceof ProjectMemberDiagram) {
+                ProjectMemberDiagram pmd = (ProjectMemberDiagram) obj;
+                if (pmd.getDiagram() == d) {
+                    _members.removeElement(pmd);
+                    break;
+                }
+            }
+        }
+    }
+
+    public ProjectMember findMemberByName(String name) {
+        LOG.debug("findMemberByName called for \"" + name + "\".");
+        for (int i = 0; i < _members.size(); i++) {
+            ProjectMember pm = (ProjectMember) _members.elementAt(i);
+            if (name.equals(pm.getPlainName()))
+                return pm;
+        }
+        LOG.debug("Member \"" + name + "\" not found.");
+        return null;
     }
 
 
+    public void loadMembersOfType(String type) {
+        if (type == null)
+            return;
+        java.util.Enumeration enum = getMembers().elements();
+        try {
+            while (enum.hasMoreElements()) {
+                ProjectMember pm = (ProjectMember) enum.nextElement();
+                if (type.equalsIgnoreCase(pm.getType()))
+                    pm.load();
+            }
+        } catch (IOException ignore) {
+            LOG.error("IOException in makeEmptyProject", ignore);
+        } catch (org.xml.sax.SAXException ignore) {
+            LOG.error("SAXException in makeEmptyProject", ignore);
+        }
+    }
+
+    public void loadAllMembers() {
+        loadMembersOfType("xmi");
+        loadMembersOfType("argo");
+        loadMembersOfType("pgml");
+        loadMembersOfType("todo");
+        loadMembersOfType("text");
+        loadMembersOfType("html");
+    }
+
+    // frank: additional helper. Is there already another function doing this?
+
+    /**
+     * Copies one file src to another, raising file exceptions
+     * if there are some problems.
+     * 
+     * @param dest The destination file.
+     * @param src The source file.
+     * @return The destination file after successful copying.
+     * @throws IOException if there is some problems with the files.
+     * @throws FileNotFoundException if any of the files cannot be found.
+     */
+    private File copyFile(File dest, File src)
+        throws FileNotFoundException, IOException {
+        
+        // first delete dest file
+        if (dest.exists()) {
+	    dest.delete();
+	}
+
+        FileInputStream fis  = new FileInputStream(src);
+        FileOutputStream fos = new FileOutputStream(dest);
+        byte[] buf = new byte[1024];
+        int i = 0;
+        while ((i = fis.read(buf)) != -1) {
+            fos.write(buf, 0, i);
+        }
+        fis.close();
+        fos.close();
+        
+        dest.setLastModified(src.lastModified());
+        
+        return dest;
+    }
+
+    /**
+     * There are known issues with saving, particularly
+     * losing the xmi at save time. see issue
+     * http://argouml.tigris.org/issues/show_bug.cgi?id=410
+     *
+     * It is also being considered to save out individual
+     * xmi's from individuals diagrams to make
+     * it easier to modularize the output of Argo.
+     * 
+     * @param overwrite <tt>true</tt> if we are allowed to replace a file.
+     * @param file The file to write.
+     * @throws Exception if anything goes wrong.
+     * TODO: Replace the general Exception with specific Exceptions.
+     */
+    public void save(boolean overwrite, File file)
+        throws Exception {
+        setFile(file);
+        setVersion(ArgoVersion.getVersion());
+
+        if (expander == null) {
+            Hashtable templates = TemplateReader.readFile(ARGO_TEE);
+            expander = new OCLExpander(templates);
+        }
+
+        preSave();
+        
+        // frank: first backup the existing file to name+"#"
+        File tempFile = new File( file.getAbsolutePath() + "#");
+        File backupFile = new File( file.getAbsolutePath() + "~");
+        if (tempFile.exists()) {
+	    tempFile.delete();
+	}
+        if (file.exists()) {
+	    copyFile(tempFile, file);
+	}
+        // frank end
+
+        ZipOutputStream stream =
+            new ZipOutputStream(new FileOutputStream(file));
+        BufferedWriter writer =
+            new BufferedWriter(new OutputStreamWriter(stream, "UTF-8"));
+
+        ZipEntry zipEntry =
+	    new ZipEntry(getBaseName() + FileConstants.UNCOMPRESSED_FILE_EXT);
+        stream.putNextEntry(zipEntry);
+        expander.expand(writer, this, "", "");
+        writer.flush();
+        stream.closeEntry();
+
+        String path = file.getParent();
+        LOG.info("Dir ==" + path);
+        int size = _members.size();
+
+        try {
+            // First we save all objects that are not XMI objects i.e. the
+            // diagrams (first for loop).
+            // The we save all XMI objects (second for loop).
+            // This is because order is important on saving.
+            Collection names = new ArrayList();
+            int counter = 0;  
+            for (int i = 0; i < size; i++) {
+                ProjectMember p = (ProjectMember) _members.elementAt(i);
+                if (!(p.getType().equalsIgnoreCase("xmi"))) {
+                    LOG.info("Saving member of type: "
+				  + ((ProjectMember) _members.elementAt(i))
+				        .getType());
+                    String name = p.getName();
+                    String originalName = name;
+                    while (names.contains(name)) {
+                        name = ++counter + originalName;
+                    }
+                    names.add(name);
+                    stream.putNextEntry(new ZipEntry(name));
+                    p.save(path, overwrite, writer);
+                    writer.flush();
+                    stream.closeEntry();
+                }
+            }
+
+            for (int i = 0; i < size; i++) {
+                ProjectMember p = (ProjectMember) _members.elementAt(i);
+                if (p.getType().equalsIgnoreCase("xmi")) {
+                    LOG.info("Saving member of type: "
+				  + ((ProjectMember) _members.elementAt(i))
+				        .getType());
+                    stream.putNextEntry(new ZipEntry(p.getName()));
+                    p.save(path, overwrite, writer);
+                }
+            }
+            
+            // if save did not raise an exception 
+            // and name+"#" exists move name+"#" to name+"~"
+            // this is the correct backup file
+            if (backupFile.exists()) {
+		backupFile.delete();
+	    }
+            if (tempFile.exists() && !backupFile.exists()) {
+		tempFile.renameTo(backupFile);
+	    }
+            if (tempFile.exists()) {
+		tempFile.delete();
+	    }
+
+        } catch (IOException e) {
+            LOG.debug("hat nicht geklappt: " + e);
+            // frank: deleted it because we are propagating the exception
+            //e.printStackTrace();
+            
+            // frank: close from outside, file have to be closed before
+            // deleting it
+            writer.close();
+            
+            // frank: in case of exception 
+            // delete name and mv name+"#" back to name if name+"#" exists
+            // this is the "rollback" to old file
+            file.delete();
+            tempFile.renameTo( file);
+            // we have to give a message to user and set the system to unsaved!
+            throw e;
+        }
+
+        
+        //TODO: in future allow independent saving
+        writer.close();
+
+        postSave();
+    }
+
     /**
      * Get the author name.
-     *
+     * 
      * @return The author name.
      */
     public String getAuthorname() {
-        return authorname;
+        return _authorname;
     }
-
+    
     /**
      * Set the author name.
-     *
+     * 
      * @param s The new author name.
      */
     public void setAuthorname(String s) {
-        authorname = s;
-    }
-
-    /**
-     * Get the author name.
-     *
-     * @return The author name.
-     */
-    public String getAuthoremail() {
-        return authoremail;
-    }
-
-    /**
-     * Set the author name.
-     *
-     * @param s The new author name.
-     */
-    public void setAuthoremail(String s) {
-        authoremail = s;
+        _authorname = s;
     }
 
     /**
      * Get the version.
-     *
+     * 
      * @return the version.
      */
     public String getVersion() {
-        return version;
+        return _version;
     }
-
+    
     /**
      * Set the new version.
      * @param s The new version.
      */
     public void setVersion(String s) {
-        version = s;
+        _version = s;
     }
 
     /**
      * Get the description.
-     *
+     * 
      * @return the description.
      */
     public String getDescription() {
-        return description;
+        return _description;
     }
 
     /**
      * Set a new description.
-     *
+     *  
      * @param s The new description.
      */
     public void setDescription(String s) {
-        description = s;
+        _description = s;
     }
 
     /**
      * Get the history file.
-     *
+     * 
      * @return The history file.
      */
     public String getHistoryFile() {
-        return historyFile;
+        return _historyFile;
     }
 
     /**
      * Set the history file.
-     *
+     * 
      * @param s The new history file.
      */
     public void setHistoryFile(String s) {
-        historyFile = s;
+        _historyFile = s;
+    }
+
+    /**
+     * Set the needs-to-be-saved flag.
+     * 
+     * @param newValue The new value.
+     */
+    public void setNeedsSave(boolean newValue) {
+        _saveRegistry.setChangeFlag(newValue);
+    }
+    
+    /**
+     * Test if the model needs to be saved.
+     * 
+     * @return <tt>true</tt> if the model needs to be saved.
+     */
+    public boolean needsSave() {
+        return _saveRegistry.hasChanged();
     }
 
     /**
      * Returns all models defined by the user. I.e. this does not return the
      * default model but all other models.
-     *
+     * 
      * @return A Vector of all user defined models.
      */
     public Vector getUserDefinedModels() {
-        return models;
+        return _models;
     }
 
     /**
      * Returns all models, including the default model (default.xmi).
-     *
+     * 
      * @return A Collection containing all models.
      */
     public Collection getModels() {
         Set ret = new HashSet();
-        ret.addAll(models);
-        ret.add(defaultModel);
+        ret.addAll(_models);
+        ret.add(_defaultModel);
         return ret;
     }
 
     /**
      * Return the model.<p>
-     *
-     * If there isn't exactly one model, <code>null</code> is returned.
-     *
+     * 
+     * If there isn't exactly one model, <tt>null</tt> is returned.
+     * 
      * @return the model.
      */
     public Object getModel() {
-        if (models.size() != 1) {
+        if (_models.size() != 1)
             return null;
-        }
-        return models.elementAt(0);
+        return _models.elementAt(0);
     }
 
     /**
      * Searches for a type/classifier with name s. If the type is not found,
      * a new type is created and added to the current namespace.
-     * @param s the name of the type/classifier to be found
+     * @param s
      * @return MClassifier
      */
     public Object findType(String s) {
@@ -584,37 +1001,34 @@ public class Project implements java.io.Serializable, TargetListener {
      * true, a new type is defined if the type/classifier is not
      * found. The newly created type is added to the currentNamespace
      * and given the name s.
-     * @param s the name of the type/classifier to be found
-     * @param defineNew if true, define a new one
-     * @return MClassifier the found classifier
+     * @param s
+     * @param defineNew
+     * @return MClassifier
      */
     public Object findType(String s, boolean defineNew) {
-        if (s != null) {
+        if (s != null)
             s = s.trim();
-        }
-        if (s == null || s.length() == 0) {
+        if (s == null || s.length() == 0)
             return null;
-        }
         Object cls = null;
-        int numModels = models.size();
+        int numModels = _models.size();
         for (int i = 0; i < numModels; i++) {
-            cls = findTypeInModel(s, models.elementAt(i));
-            if (cls != null) {
+            cls = findTypeInModel(s, _models.elementAt(i));
+            if (cls != null)
                 return cls;
-            }
         }
-        cls = findTypeInModel(s, defaultModel);
+        cls = findTypeInModel(s, _defaultModel);
         // hey, now we should move it to the model the user is working in
         if (cls != null) {
-            cls =
-                Model.getModelManagementHelper()
-                	.getCorrespondingElement(cls, getRoot());
+            cls = ModelManagementHelper.
+                getHelper().getCorrespondingElement(cls, getRoot());
         }
         if (cls == null && defineNew) {
             LOG.debug("new Type defined!");
             cls =
-                Model.getCoreFactory().buildClass(getCurrentNamespace());
-            Model.getCoreHelper().setName(cls, s);
+                UmlFactory.getFactory().getCore()
+		    .buildClass(getCurrentNamespace());
+            ModelFacade.setName(cls, s);
         }
         return cls;
     }
@@ -623,14 +1037,14 @@ public class Project implements java.io.Serializable, TargetListener {
      * Finds all figs on the diagrams for some project member,
      * including the figs containing the member (so for some
      * operation, the containing figclass is returned).
-     *
-     * @param member The member we are looking for.
-     *              This can be a model element object but also another object.
+     * 
+     * @param member The member we are looking for. 
+     *               This can be a NSUML object but also another object.
      * @return Collection The collection with the figs.
      */
     public Collection findFigsForMember(Object member) {
         Collection figs = new ArrayList();
-        Iterator it = diagrams.iterator();
+        Iterator it = getDiagrams().iterator();
         while (it.hasNext()) {
             ArgoDiagram diagram = (ArgoDiagram) it.next();
             Object fig = diagram.getContainingFig(member);
@@ -641,96 +1055,55 @@ public class Project implements java.io.Serializable, TargetListener {
         return figs;
     }
 
-    /**
-     * Returns a list with all figs for some UML object on all diagrams.
-     *
-     * @param obj the given UML object
-     * @return List the list of figs
-     */
-    public Collection findAllPresentationsFor(Object obj) {
-        Collection figs = new ArrayList();
-        Iterator it = diagrams.iterator();
-        while (it.hasNext()) {
-            Diagram diagram = (Diagram) it.next();
-            Fig aFig = diagram.presentationFor(obj);
-            if (aFig != null) {
-                figs.add(aFig);
-            }
-        }
-        return figs;
-    }
-
-    /**
+    /** 
      * Finds a classifier with a certain name.<p>
-     *
+     * 
      * Will only return first classifier with the matching name.
      *
      * @param s is short name.
      * @param ns Namespace where we do the search.
-     * @return the found classifier (or <code>null</code> if not found).
+     * @return the found classifier (or <tt>null</tt> if not found).
      */
     public Object findTypeInModel(String s, Object ns) {
-
-        if (!Model.getFacade().isANamespace(ns)) {
-            throw new IllegalArgumentException(
-                    "Looking for the classifier " + s
-                    + " in a non-namespace object of " + ns
-                    + ". A namespace was expected.");
-    	}
-
+        
+        if (!ModelFacade.isANamespace(ns)) {
+            throw new IllegalArgumentException();
+	}
+        
         Collection allClassifiers =
-            Model.getModelManagementHelper()
-	        .getAllModelElementsOfKind(ns,
-	                Model.getMetaTypes().getClassifier());
-
+            ModelManagementHelper.getHelper()
+	        .getAllModelElementsOfKind(ns, (Class) ModelFacade.CLASSIFIER);
+        
         Object[] classifiers = allClassifiers.toArray();
         Object classifier = null;
-
+        
         for (int i = 0; i < classifiers.length; i++) {
-
+            
             classifier = classifiers[i];
-            if (Model.getFacade().getName(classifier) != null
-            		&& Model.getFacade().getName(classifier).equals(s)) {
+            if (ModelFacade.getName(classifier) != null
+		&& ModelFacade.getName(classifier).equals(s)) {
                 return classifier;
             }
         }
-
+        
         return null;
     }
 
-    /**
-     * @param m the namespace
-     */
     public void setCurrentNamespace(Object m) {
-
-        if (m != null && !Model.getFacade().isANamespace(m)) {
+        
+        if (m != null && !ModelFacade.isANamespace(m)) {
             throw new IllegalArgumentException();
-    	}
-
-        currentNamespace = m;
+	}
+        
+        _currentNamespace = m;
     }
 
-    /**
-     * @return the namespace
-     */
     public Object getCurrentNamespace() {
-        return currentNamespace;
+        return _currentNamespace;
     }
 
-    /**
-     * @return the diagrams
-     */
     public Vector getDiagrams() {
-        return diagrams;
-    }
-
-    /**
-     * Get the number of diagrams in this project.
-     * Used by argo2.tee!!
-     * @return the number of diagrams in this project.
-     */
-    public int getDiagramCount() {
-        return diagrams.size();
+        return _diagrams;
     }
 
     /**
@@ -740,314 +1113,258 @@ public class Project implements java.io.Serializable, TargetListener {
      * @param name is the name to search for.
      */
     public ArgoDiagram getDiagram(String name) {
-        Iterator it = diagrams.iterator();
-        while (it.hasNext()) {
-            ArgoDiagram ad = (ArgoDiagram) it.next();
-            if (ad.getName() != null && ad.getName().equals(name)) {
-                return ad;
-            }
-            if (ad.getItemUID() != null
-                    && ad.getItemUID().toString().equals(name)) {
-                return ad;
-            }
-        }
-        return null;
-    }
+	Iterator it = _diagrams.iterator();
+	while (it.hasNext()) {
+	    ArgoDiagram ad = (ArgoDiagram) it.next();
+	    if (ad.getName() != null
+		&& ad.getName().equals(name))
+		return ad;
+	    if (ad.getItemUID() != null
+		&& ad.getItemUID().toString().equals(name))
+		return ad;
+	}
+	return null;
+    } 
 
-    /**
-     * @param d the diagram to be added
-     */
     public void addDiagram(ArgoDiagram d) {
         // send indeterminate new value instead of making copy of vector
-        diagrams.addElement(d);
-        d.addVetoableChangeListener(new Vcl());
-        ProjectManager.getManager().setSaveEnabled(true);
+        _diagrams.addElement(d);
+        d.addChangeRegistryAsListener(_saveRegistry);
+        setNeedsSave(true);
     }
 
     /**
-     * Removes a diagram from the list with diagrams.
-     *
+     * Removes a diagram from the list with diagrams. 
+     * 
      * Removes (hopefully) the event listeners for this diagram.  Does
      * not remove the diagram from the project members. This should
      * not be called directly. Use moveToTrash if you want to remove a
      * diagram.
-     *
-     * @param d the ArgoDiagram
+     * 
+     * @param d
      */
     protected void removeDiagram(ArgoDiagram d) {
-        d.removeVetoableChangeListener(new Vcl());
-        diagrams.removeElement(d);
-        if (d instanceof UMLDiagram) {
-            /* If this is a UML diagram, then remove the dependent
-             * modelelements, such as the statemachine
-             * for a statechartdiagram.
-             */
-            Object o = ((UMLDiagram) d).getDependentElement();
-            if (o != null) {
-                moveToTrash(o);
+        _diagrams.removeElement(d);
+        // if the diagram is a statechart,
+        // remove its associated statemachine model elements
+        if (d instanceof UMLStateDiagram) {
+            UMLStateDiagram statediagram = (UMLStateDiagram) d;
+            // if the statemachine has already been deleted,
+            // and is now null,
+            // don't attempt to delete it!
+            if (statediagram.getStateMachine() != null) {
+                this.moveToTrash(statediagram.getStateMachine());
             }
         }
+        d.removeChangeRegistryAsListener(_saveRegistry);
+        setNeedsSave(true);
     }
 
-    /**
-     * Listener to events from the Diagram class. <p>
-     *
-     * Purpose: changing the name of a diagram shall set the need save flag.
-     *
-     * @author mvw@tigris.org
-     */
-    private static class Vcl implements VetoableChangeListener {
-        /**
-         * @see java.beans.VetoableChangeListener#vetoableChange(java.beans.PropertyChangeEvent)
-         */
-        public void vetoableChange(PropertyChangeEvent evt)
-            throws PropertyVetoException {
-            if (evt.getPropertyName().equals("name")) {
-                ProjectManager.getManager().setSaveEnabled(true);
-            }
-        }
-    }
-
-    /**
-     * @param me the given modelelement
-     * @return the total number of presentation
-     *         for the given modelelement in the project
-     */
     public int getPresentationCountFor(Object me) {
-
-        if (!Model.getFacade().isAModelElement(me)) {
+        
+        if (!ModelFacade.isAModelElement(me)) {
             throw new IllegalArgumentException();
-    	}
-
+	}
+        
         int presentations = 0;
-        int size = diagrams.size();
+        int size = _diagrams.size();
         for (int i = 0; i < size; i++) {
-            Diagram d = (Diagram) diagrams.elementAt(i);
+            Diagram d = (Diagram) _diagrams.elementAt(i);
             presentations += d.getLayer().presentationCountFor(me);
         }
         return presentations;
     }
 
-    /**
-     * @return an initial target, in casu a diagram or a model
-     */
     public Object getInitialTarget() {
-        if (diagrams.size() > 0) {
-            return diagrams.elementAt(0);
-        }
-        if (models.size() > 0) {
-            return models.elementAt(0);
-        }
+        if (_diagrams.size() > 0)
+            return _diagrams.elementAt(0);
+        if (_models.size() > 0)
+            return _models.elementAt(0);
         return null;
     }
 
-
-    /**
-     * @param cgp the generation preferences
-     */
     public void setGenerationPrefs(GenerationPreferences cgp) {
-        cgPrefs = cgp;
+        _cgPrefs = cgp;
     }
-
-    /**
-     * @return the generation preferences
-     */
     public GenerationPreferences getGenerationPrefs() {
-        return cgPrefs;
+        return _cgPrefs;
     }
 
     ////////////////////////////////////////////////////////////////
     // event handling
 
-    /**
-     * @return the VetoableChangeSupport
-     */
     public VetoableChangeSupport getVetoSupport() {
-        if (vetoSupport == null) {
-            vetoSupport = new VetoableChangeSupport(this);
-        }
-        return vetoSupport;
+        if (_vetoSupport == null)
+            _vetoSupport = new VetoableChangeSupport(this);
+        return _vetoSupport;
     }
 
-    /**
-     * This is executed before a save.
-     */
-    public void preSave() {
-        for (int i = 0; i < diagrams.size(); i++) {
-            ((Diagram) diagrams.elementAt(i)).preSave();
-        }
+    private void preSave() {
+        for (int i = 0; i < _diagrams.size(); i++)
+	    ((Diagram) _diagrams.elementAt(i)).preSave();
         // TODO: is preSave needed for models?
     }
 
-    /**
-     * This is execcuted after a save.
-     */
-    public void postSave() {
-        for (int i = 0; i < diagrams.size(); i++) {
-            ((Diagram) diagrams.elementAt(i)).postSave();
-        }
+    private void postSave() {
+        for (int i = 0; i < _diagrams.size(); i++)
+	    ((Diagram) _diagrams.elementAt(i)).postSave();
         // TODO: is postSave needed for models?
-        ProjectManager.getManager().setSaveEnabled(true);
+        setNeedsSave(false);
     }
 
     /**
-     * This is executed after a load.
+     * @deprecated As of 28 Apr 2003 (ArgoUml version 0.13.5).
+     *             Will be protected in future.
+     * TODO: Replace by?
      */
     public void postLoad() {
-        for (int i = 0; i < diagrams.size(); i++) {
-            ((Diagram) diagrams.elementAt(i)).postLoad();
-        }
+        for (int i = 0; i < _diagrams.size(); i++)
+	    ((Diagram) _diagrams.elementAt(i)).postLoad();
         // issue 1725: the root is not set, which leads to problems
         // with displaying prop panels
-        Object model = getModel();
-
-        LOG.info("Setting root model to " + model);
-
-        setRoot(model);
-
-        ProjectManager.getManager().setSaveEnabled(true);
+        setRoot( getModel());
+        
+        setNeedsSave(false);
         // we don't need this HashMap anymore so free up the memory
-        uuidRefs = null;
+        _UUIDRefs = null;
     }
 
-    ////////////////////////////////////////////////////////////////
-    // trash related methods
-
     /**
-     * Moves some object to trash, i.e. deletes it completely with all
-     * dependent structures. <p>
+     * Moves some object to trash. 
      *
-     * Deleting an object involves: <pre>
-     * - Removing Target history
-     * - Deleting all Fig representations for the object
-     * - Deleting the UML element
-     * - Deleting all dependent UML modelelements
-     * - Deleting CommentEdges (which are not UML elements)
-     * - Move to trash for enclosed objects, i.e. graphically drawn on top of
-     * - Move to trash subdiagrams for the object
-     * - Saveguard that there is always at least 1 diagram left
-     * - If the current diagram has been deleted, select a new one to show
-     * - Trigger the explorer when a diagram is deleted
-     * - Set the needsSave (dirty) flag of the projectmanager
-     * </pre>
+     * TODO: This mechanism must be rethought since it only deletes an
+     * object completely from the project
      *
      * @param obj The object to be deleted
      * @see org.argouml.kernel.Project#trashInternal(Object)
      */
+    ////////////////////////////////////////////////////////////////
+    // trash related methos
+
+    // Attention: whole Trash mechanism should be rethought concerning nsuml
     public void moveToTrash(Object obj) {
-        if (trashcan.contains(obj)) {
+        if (Trash.SINGLETON.contains(obj))
             return;
-        }
         trashInternal(obj);
     }
 
     /**
-     * Removes some object from the project.
+     * Removes some object from the project. Does not update GUI since
+     * this method only handles project management.
+     * @param obj
      *
-     * @param obj the object to be thrown away
+     * <p>Attention: whole Trash mechanism should be rethought concerning nsuml
+     * 
+     * <p>Note that at present these are all if, not
+     * else-if. Rather than make a big change, I've just explicitly dealt with
+     * the case where we have a use case that is not classifier.
      */
     protected void trashInternal(Object obj) {
-        if (Model.getFacade().isAModel(obj)) {
-            return; //Can not delete the model
-        }
-
+        boolean needSave = false;
         if (obj != null) {
-            trashcan.add(obj);
+            TargetManager.getInstance().removeTarget(obj);
+            TargetManager.getInstance().removeHistoryElement(obj);
+            Trash.SINGLETON.addItemFrom(obj, null);
         }
-        if (Model.getFacade().isAModelElement(obj)) {
-
-            Model.getUmlFactory().delete(obj);
-
-            if (obj instanceof ProjectMember
-                    && members.contains(obj)) {
-                // TODO: Bob says - can this condition ever be reached?
-                // Surely obj cannot be both a model element (previous if) and
-                // a ProjectMember (this if)
-                members.remove(obj);
+        if (ModelFacade.isABase(obj)) { // an object that can be represented
+            ProjectBrowser.getInstance().getEditorPane()
+		.removePresentationFor(obj, getDiagrams());
+            UmlFactory.getFactory().delete(obj);
+            if (_members.contains(obj)) {
+                _members.remove(obj);
             }
-
-            // TODO: Presumably this is only relevant if 
-            // obj is actually a Model.
-            // An added test of Model.getFacade.isAModel(obj) would clarify what
-            // is going on here.
-            if (models.contains(obj)) {
-                models.remove(obj);
+            if (_models.contains(obj)) {
+                _models.remove(obj);
+            }           
+            needSave = true;
+        } else {
+            if (obj instanceof ArgoDiagram) {
+                removeProjectMemberDiagram((ArgoDiagram) obj);
+                needSave = true;
+                // only need to manually delete diagrams because they
+                // don't have a decent event system set up.
+                ExplorerEventAdaptor.getInstance().modelElementRemoved(obj);
             }
-        } else if (obj instanceof ArgoDiagram) {
-            TargetManager.getInstance().removeTarget(obj);
-            TargetManager.getInstance().removeHistoryElement(obj);
-            removeProjectMemberDiagram((ArgoDiagram) obj);
-            // only need to manually delete diagrams because they
-            // don't have a decent event system set up.
-            ExplorerEventAdaptor.getInstance().modelElementRemoved(obj);
-        } else if (obj instanceof Fig) {
-            TargetManager.getInstance().removeTarget(obj);
-            TargetManager.getInstance().removeHistoryElement(obj);
-            ((Fig) obj).deleteFromModel();
-            // TODO: Bob says - I've never seen this appear in the log.
-            // I believe this code is never reached. If we delete a FigEdge
-            // or FigNode we actually call this method with the owner not
-            // the Fig itself.
-            // For Figs with no owner (primitives like circle etc) then they
-            // are not deleted (crtl-Del) they are removed (Del)
-            LOG.error("Request to delete a Fig " + obj.getClass().getName());
-        } else if (obj instanceof CommentEdge) {
-            TargetManager.getInstance().removeTarget(obj);
-            TargetManager.getInstance().removeHistoryElement(obj);
-            CommentEdge ce = (CommentEdge) obj;
-            LOG.info("Removing the link from " + ce.getAnnotatedElement() 
-                    + " to " + ce.getComment());
-            Model.getCoreHelper().removeAnnotatedElement(
-                    ce.getComment(), ce.getAnnotatedElement());
-        }
+            if (obj instanceof Fig) {
+                ((Fig) obj).dispose();
+                needSave = true;
+                // for explorer deletion:
+                obj = ((Fig) obj).getOwner();
+            }
+        }        
+        setNeedsSave(needSave);
+    }
+
+    public void moveFromTrash(Object obj) {
+        LOG.debug("TODO: not restoring " + obj);
+    }
+
+    public boolean isInTrash(Object dm) {
+        return Trash.SINGLETON.contains(dm);
+    }
+
+    ////////////////////////////////////////////////////////////////
+    // usage statistics (deprecated)
+
+    /**
+     * @deprecated since 0.15.1.
+     */
+    public static void resetStats() { }
+
+    /**
+     * @deprecated since 0.15.1.
+     */
+    public static void setStat(String n, int v) { }
+
+    /**
+     * @deprecated since 0.15.1.
+     */
+    public static Vector getStats() {
+        
+        Vector s = new Vector();
+        return s;
     }
 
     /**
-     * @param obj the object
-     * @return true if the object is trashed
+     * @deprecated since 0.15.1.
      */
-    public boolean isInTrash(Object obj) {
-        return trashcan.contains(obj);
+    public static void addStat(Vector stats, String name, int value) {
     }
 
     /**
-     * @param theDefaultModel a uml model
+     * @param defaultModel a uml model
      */
-    public void setDefaultModel(Object theDefaultModel) {
-
-        if (!Model.getFacade().isAModel(theDefaultModel)) {
-            throw new IllegalArgumentException(
-                    "The default model must be a Model type. Received a "
-                    + theDefaultModel.getClass().getName());
-        }
-
-        defaultModel = theDefaultModel;
-        defaultModelTypeCache = new HashMap();
+    public void setDefaultModel(Object defaultModel) {
+        
+        if (!ModelFacade.isAModel(defaultModel)) {
+            throw new IllegalArgumentException();
+	}
+        
+        _defaultModel = defaultModel;
+	_defaultModelCache = new HashMap();
     }
 
     /**
      * Get the default model.
-     *
+     * 
      * @return A model.
      */
     public Object getDefaultModel() {
-        return defaultModel;
+        return _defaultModel;
     }
 
-    /**
-     * Find a type by name in the default model.
+    /** Find a type by name in the default model.
      *
      * @param name the name.
      * @return the type.
      */
     public Object findTypeInDefaultModel(String name) {
-        if (defaultModelTypeCache.containsKey(name)) {
-            return defaultModelTypeCache.get(name);
-        }
+	if (_defaultModelCache.containsKey(name))
+	    return _defaultModelCache.get(name);
 
-        Object result = findTypeInModel(name, getDefaultModel());
-        defaultModelTypeCache.put(name, result);
-        return result;
+	Object result = findTypeInModel(name, getDefaultModel());
+	_defaultModelCache.put(name, result);
+	return result;
     }
 
     /**
@@ -1055,7 +1372,7 @@ public class Project implements java.io.Serializable, TargetListener {
      * @return MModel
      */
     public Object getRoot() {
-        return Model.getModelManagementFactory().getRootModel();
+        return _root;
     }
 
     /**
@@ -1063,20 +1380,19 @@ public class Project implements java.io.Serializable, TargetListener {
      * @param root The root to set, a uml model
      */
     public void setRoot(Object root) {
-
-        if (root == null) {
-            throw new IllegalArgumentException("A root model element is required");
+        
+        if (!ModelFacade.isAModel(root)) {
+            throw new IllegalArgumentException();
+	}
+        
+        if (_root != null) {
+            _members.remove(_root);
+            _models.remove(_root);
         }
-        if (!Model.getFacade().isAModel(root)) {
-            throw new IllegalArgumentException("The root model element must be a model - got " + root.getClass().getName());
-        }
-
-        Object treeRoot = Model.getModelManagementFactory().getRootModel();
-        if (treeRoot != null) {
-            models.remove(treeRoot);
-        }
-        Model.getModelManagementFactory().setRootModel(root);
+        _root = root;
+        addMember(root);
         addModel(root);
+
     }
 
     /**
@@ -1087,7 +1403,7 @@ public class Project implements java.io.Serializable, TargetListener {
      * it's not valid.
      */
     public boolean isValidDiagramName(String name) {
-        Iterator it = diagrams.iterator();
+        Iterator it = getDiagrams().iterator();
         boolean rv = true;
         while (it.hasNext()) {
             ArgoDiagram diagram = (ArgoDiagram) it.next();
@@ -1100,19 +1416,43 @@ public class Project implements java.io.Serializable, TargetListener {
     }
 
     /**
+     * Returns the cgPrefs.
+     * @return GenerationPreferences
+     */
+    public GenerationPreferences getCgPrefs() {
+        return _cgPrefs;
+    }
+
+    /**
+     * Returns the needsSave.
+     * @return boolean
+     */
+    public boolean isNeedsSave() {
+        return _needsSave;
+    }
+
+    /**
+     * Returns the saveRegistry.
+     * @return ChangeRegistry
+     */
+    public ChangeRegistry getSaveRegistry() {
+        return _saveRegistry;
+    }
+
+    /**
      * Returns the searchpath.
      * @return Vector
      */
     public Vector getSearchpath() {
-        return searchpath;
+        return _searchpath;
     }
 
     /**
-     * Returns the uri.
-     * @return URI
+     * Returns the url.
+     * @return URL
      */
-    public URI getUri() {
-        return uri;
+    public URL getUrl() {
+        return _url;
     }
 
     /**
@@ -1120,15 +1460,63 @@ public class Project implements java.io.Serializable, TargetListener {
      * @return HashMap
      */
     public HashMap getUUIDRefs() {
-        return uuidRefs;
+        return _UUIDRefs;
+    }
+
+    /**
+     * Sets the cgPrefs.
+     * @param cgPrefs The cgPrefs to set
+     */
+    public void setCgPrefs(GenerationPreferences cgPrefs) {
+        _cgPrefs = cgPrefs;
+    }
+
+    /**
+     * Sets the diagrams.
+     * @param diagrams The diagrams to set
+     */
+    public void setDiagrams(Vector diagrams) {
+        _diagrams = diagrams;
+    }
+
+    /**
+     * Sets the members.
+     * @param members The members to set
+     */
+    public void setMembers(Vector members) {
+        _members = members;
+    }
+
+    /**
+     * Sets the models.
+     * @param models The models to set
+     */
+    public void setModels(Vector models) {
+        _models = models;
+    }
+
+    /**
+     * Sets the saveRegistry.
+     * @param saveRegistry The saveRegistry to set
+     */
+    public void setSaveRegistry(ChangeRegistry saveRegistry) {
+        _saveRegistry = saveRegistry;
     }
 
     /**
      * Sets the searchpath.
-     * @param theSearchpath The searchpath to set
+     * @param searchpath The searchpath to set
      */
-    public void setSearchpath(Vector theSearchpath) {
-        this.searchpath = theSearchpath;
+    public void setSearchpath(Vector searchpath) {
+        _searchpath = searchpath;
+    }
+
+    /**
+     * Sets the url.
+     * @param url The url to set
+     */
+    public void setUrl(URL url) {
+        _url = url;
     }
 
     /**
@@ -1136,188 +1524,131 @@ public class Project implements java.io.Serializable, TargetListener {
      * @param uUIDRefs The uUIDRefs to set
      */
     public void setUUIDRefs(HashMap uUIDRefs) {
-        uuidRefs = uUIDRefs;
+        _UUIDRefs = uUIDRefs;
     }
 
     /**
      * Sets the vetoSupport.
-     * @param theVetoSupport The vetoSupport to set
+     * @param vetoSupport The vetoSupport to set
      */
-    public void setVetoSupport(VetoableChangeSupport theVetoSupport) {
-        this.vetoSupport = theVetoSupport;
+    public void setVetoSupport(VetoableChangeSupport vetoSupport) {
+        _vetoSupport = vetoSupport;
     }
 
     /**
-     * Get the current viewed diagram.
-     *
+     * Get the current viewed diagram
      * @return the current viewed diagram
      */
     public ArgoDiagram getActiveDiagram() {
-        return activeDiagram;
+        return _activeDiagram;
     }
 
     /**
-     * @param theDiagram the ArgoDiagram
+     * @param diagram
      */
-    public void setActiveDiagram(ArgoDiagram theDiagram) {
-        activeDiagram = theDiagram;
+    public void setActiveDiagram(ArgoDiagram diagram) {
+        _activeDiagram = diagram;
     }
 
-    /**
+    /** 
      * @see TargetListener#targetAdded(TargetEvent)
      */
-    public void targetAdded(TargetEvent e) {
-    	setTarget(e.getNewTarget());
+    public void targetAdded(TargetEvent e) {       
+	setTarget(e.getNewTarget());
     }
 
-    /**
+    /** 
      * @see TargetListener#targetRemoved(TargetEvent)
      */
     public void targetRemoved(TargetEvent e) {
-    	setTarget(e.getNewTarget());
+	setTarget(e.getNewTarget());
     }
 
-    /**
+    /** 
      * @see TargetListener#targetSet(TargetEvent)
      */
     public void targetSet(TargetEvent e) {
-    	setTarget(e.getNewTarget());
+	setTarget(e.getNewTarget());
     }
-
+    
     /**
      * Called to update the current namespace and active diagram after
      * the target has changed.
-     *
-     * TODO: The parameter is not used. Why?
-     * @param target Not used.
+     * @param target
      */
     private void setTarget(Object target) {
-        Object theCurrentNamespace = null;
-        target = TargetManager.getInstance().getModelTarget();
+        Object currentNamespace = null;
+	target = TargetManager.getInstance().getModelTarget();
         if (target instanceof UMLDiagram) {
-            theCurrentNamespace = ((UMLDiagram) target).getNamespace();
-        } else if (Model.getFacade().isANamespace(target)) {
-            theCurrentNamespace = target;
-        } else if (Model.getFacade().isAModelElement(target)) {
-            theCurrentNamespace = Model.getFacade().getNamespace(target);
-        } else {
-            theCurrentNamespace = getRoot();
-        }
-        setCurrentNamespace(theCurrentNamespace);
-
+            currentNamespace = ((UMLDiagram) target).getNamespace();
+        } else
+	    if (ModelFacade.isANamespace(target))
+		currentNamespace = target;
+	    else 
+		if (ModelFacade.isAModelElement(target))
+		    currentNamespace = ModelFacade.getNamespace(target);
+		else
+		    currentNamespace = getRoot();
+        setCurrentNamespace(currentNamespace);
+               
         if (target instanceof ArgoDiagram) {
-            activeDiagram = (ArgoDiagram) target;
-        }
+            setActiveDiagram((ArgoDiagram) target);
+        }                  
     }
 
     /**
      * Remove the project.
      */
     public void remove() {
-
-        if (diagrams != null) {
-            for (Iterator it = diagrams.iterator(); it.hasNext();) {
-                Diagram diagram = (Diagram) it.next();
-                diagram.remove();
+        
+        if (_members != null) {
+            Iterator membersIt = _members.iterator();
+            while (membersIt.hasNext()) {
+                
+                ((ProjectMember) membersIt.next()).remove();
             }
+            
+            _members.clear();
         }
         
-        if (members != null) {
-            members.clear();
-        }
-
-        if (models != null) {
-            for (Iterator it = models.iterator(); it.hasNext();) {
-                Object model = it.next();
-                LOG.debug("Deleting project model " 
-                        + Model.getFacade().getName(model));
-                Model.getUmlFactory().delete(model);
-            }
-            models.clear();
-        }
+        if (_models != null) {
+            _models.clear();
+	}
         
-        if (defaultModel != null) {
-            LOG.debug("Deleting profile model " 
-                    + Model.getFacade().getName(defaultModel));
-            Model.getUmlFactory().delete(defaultModel);
-            defaultModel = null;
-        }
-
-        if (diagrams != null) {
-            diagrams.clear();
-        }
-
-        if (uuidRefs != null) {
-            uuidRefs.clear();
-        }
-
-        if (defaultModelTypeCache != null) {
-            defaultModelTypeCache.clear();
-        }
-
-        members = null;
-        models = null;
-        diagrams = null;
-        uuidRefs = null;
-        defaultModelTypeCache = null;
-
-        uri = null;
-        authorname = null;
-        authoremail = null;
-        description = null;
-        version = null;
-        searchpath = null;
-        historyFile = null;
-        defaultModel = null;
-        currentNamespace = null;
-        cgPrefs = null;
-        vetoSupport = null;
-        activeDiagram = null;
-
+        if (_diagrams != null) {
+            _diagrams.clear();
+	}
+        
+        if (_UUIDRefs != null) {
+            _UUIDRefs.clear();
+	}
+        
+        if (_defaultModelCache != null) {
+            _defaultModelCache.clear();
+	}
+        
+        _members = null;
+        _models = null;
+        _diagrams = null;
+        _UUIDRefs = null;
+        _defaultModelCache = null;
+        
+        expander = null;
+        _url = null;
+        _saveRegistry = null;
+        _authorname = null;
+        _description = null;
+        _version = null;
+        _searchpath = null;
+        _historyFile = null;
+        _defaultModel = null;
+        _currentNamespace = null;
+        _cgPrefs = null;
+        _vetoSupport = null;
+        _root = null;
+        _activeDiagram = null;
+        _defaultModelCache = null;
+        
         TargetManager.getInstance().removeTargetListener(this);
-        trashcan.clear();
     }
-
-    /**
-     * @return Returns the persistenceVersion.
-     */
-    public int getPersistenceVersion() {
-        return persistenceVersion;
-    }
-
-    /**
-     * @param pv The persistenceVersion to set.
-     */
-    public void setPersistenceVersion(int pv) {
-        persistenceVersion = pv;
-    }
-
-    /**
-     * @return Returns the profile.
-     */
-    public Profile getProfile() {
-        return profile;
-    }
-    
-    /**
-     * Repair all parts of the project before a save takes place.
-     * @return a report of any fixes
-     */
-    public String repair() {
-        String report = "";
-        Iterator it = members.iterator();
-        while (it.hasNext()) {
-            ProjectMember member = (ProjectMember) it.next();
-            report += member.repair();
-        }
-        return report;
-    }
-
-    /**
-     * @return the settings of this project
-     */
-    public ProjectSettings getProjectSettings() {
-        return projectSettings;
-    }
-
 } /* end class Project */
